<package>
  <name>image_view_terminal</name>
  <version>0.1.0</version>
  <description>
    Executable that can subscribe to an image topic and display it in a terminal in ASCII.
  </description>

  <author>Vincent Rabaud</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>pluginlib</build_depend>
  <build_depend>cv_bridge</build_depend>
<!--  <build_depend>libcaca-dev</build_depend>-->

  <run_depend>pluginlib</run_depend>
  <run_depend>cv_bridge</run_depend>
</package>
